Added experience section

--- a/index.html
+++ b/index.html
@@ -294,17 +294,39 @@
     </div>
   </section>
   <section>
-    <h2 class="has-text-centered title is-3">Online Courses</h2>
+    <h2 class="has-text-centered title is-3">Experience</h2>
+    <div class="experience">
+      <div class="container">
+        <div class="columns">
+          <div class="column is-3 is-offset-2">
+            <div >
+              Software Developer at IMT Software Labs
+            </div>
+            <div>
+              March 2017 - Present
+            </div>
+          </div>
+          <div class="column is-4 is-offset-2">
+            <div>
+              Software Developer Intern at Krishco Infolabs
+            </div>
+            <div>
+              September 2016 - February 2017
+            </div>
+          </div>
+        </div>
+      </div>
+
   </section>
   <footer class="footer">
     <section>
-        <div class="container">
-            <div class="content has-text-centered">
-              <p>
-                  Made with Bulma by Nirmal Kumar Sekar @2017.
-              </p>
-            </div>
-          </div>
+      <div class="container">
+        <div class="content has-text-centered">
+          <p>
+            Made with Bulma by Nirmal Kumar Sekar @2017.
+          </p>
+        </div>
+      </div>
     </section>
   </footer>
   <script type="text/javascript" src="lib/main.js"></script>
