1.Added bulma navbar burger toggle 2.Added jquery

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nirmal Kumar Sekar</title>
   <link rel="stylesheet" href="css/main.css">
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 
 <body>
@@ -15,14 +16,14 @@
       <a class="navbar-item" href="#">Home
       </a>
 
-      <button class="button navbar-burger">
+      <button class="button navbar-burger" data-target="navMenu">
         <span></span>
         <span></span>
         <span></span>
       </button>
     </div>
 
-    <div class="navbar-menu">
+    <div class="navbar-menu" id="navMenu">
       <div class="navbar-start">
         <a class="navbar-item" href="#about-me">About Me
         </a>
