1.Added social icons and links 2.Added fa

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nirmal Kumar Sekar</title>
   <link rel="stylesheet" href="css/main.css">
+  <script src="https://use.fontawesome.com/b5180cc007.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  
 </head>
 
 <body>
@@ -47,6 +49,17 @@
             <h2 class="subtitle is-4">
               Software Developer / Web Developer
             </h2>
+            <div class="social-icons">
+              <span class="icon">
+                <a href="https://github.com/nirmalks/"><i class="fa fa-lg fa-github"></i></a>
+              </span>
+              <span class="icon">
+                <a href="https://twitter.com/nirmalche/"><i class="fa fa-lg fa-twitter"></i></a>
+              </span>
+              <span class="icon">
+                <a href="https://www.linkedin.com/in/ksnirmalkumar/"><i class="fa fa-lg fa-linkedin"></i></a>
+              </span>
+            </div>
           </div>
         </div>
       </div>
@@ -124,7 +137,7 @@
       </div>
     </div>
   </section>
-  <section class="main-content is-medium">
+  <section class="main-content is-medium" id="portfolio">
     <h2 class="has-text-centered title is-3">Projects</h2>
     <div class="columns is-centered">
       <div class="column is-3">
