Commented out experience section and modified social icons

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
     </div>
   </section>
-  <section class="experience-section main-content is-medium">
+  <!-- <section class="experience-section main-content is-medium">
     <h2 class="has-text-centered title is-3">Experience</h2>
     <div class="experience">
       <div class="container">
@@ -243,7 +243,7 @@
         </div>
       </div>
 
-  </section>
+  </section> -->
   <footer class="footer">
     <section>
       <div class="container">
